[package]
name = "grammancy"
version = "0.1.0"
edition = "2024"

[dependencies]
async-tungstenite = { version = "0.30.0", features = ["gio-runtime"] }
automerge = "0.6.1"
futures = "0.3.31"
gio = "0.20.12"
glib = "0.20.12"
gtk = { version = "0.9.7", package = "gtk4", features = ["v4_16"] }
samod = { version = "0.1.0", features = ["gio", "tungstenite"] }
sourceview5 = "0.9.1"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
