[package]
name = "glyphcaster"
version = "0.1.0"
edition = "2024"

[dependencies]
async-tungstenite = { version = "0.30.0", features = ["gio-runtime"] }
automerge = "0.6.1"
futures = "0.3.31"
gio = "0.21"
glib = "0.21"
gtk = { version = "0.10", package = "gtk4", features = ["v4_16"] }
samod = { version = "0.2.2" }
sourceview5 = "0.10"
tokio = { version = "1.47.1", features = ["full"] }
iroh-automerge-repo = { git = "https://github.com/n0-computer/iroh-examples.git", branch = "main" }
# iroh-automerge-repo = { path = "../iroh-examples/iroh-automerge-repo" }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
iroh = "0.91.2"
anyhow = "1.0.99"
ssh-key = "0.6.7"
rand = "0.8"
tempfile = "3.21.0"
data-encoding = "2.9.0"
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_5"] }
